--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Logo">
+                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -112,7 +112,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
+                        <img class="footer-logo" src="img/logo.png" alt="Logo">
                         <p>@Copyright 2024</p>
                     </div>
                     
