--- a/faq.html
+++ b/faq.html
@@ -41,14 +41,14 @@
                             <span class="toggle-icon"></span>
                         </button>
 
-                        <!-- Logo -->
+                        <!--Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="index.html">
-                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="img/logo.png" alt="Logo">
+                                <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Logo">
                             </a>
                         </div>
-                        <!-- End Logo -->
+                        <!-- EndLogo -->
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -293,7 +293,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
+                        <img class="footer-logo" src="img/logo.png" alt="Logo">
                     </div>
                     <div class="col-xs-6 text-right">
                         <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
